# qt-live2d-template

./: .gitignore  CMakeLists.txt  LICENSE  README.md
LAppLive2D/: mainMinimum.cpp
LAppLive2D/include/: MouseActionManager.hpp
QtLive2dDemo/src/: main.cpp
QtLive2dTemplate/include/widget/: QLive2DWidget.h
QtLive2dTemplate/src/: main.cpp
QtLive2dTemplate/src/widget/: QLive2DWidget.cpp
script/: build.py  cmake.py  config_app.py  run.py
script/linux/: build.sh  cmake.sh  run.sh
script/win/: build.ps1  cmake.ps1  run.ps1
